# bitgen

./: .gitignore  CMakeLists.txt  LICENSE  README
include/bitgen/: bit_generator.h
src/: bit_generator.cc  bit_generator_test.cc
